_year-graph.sass, bump year to fix overflow
Shouldn't need to be fixed properly if #650 is done by next year.

--- a/_sass/_year-graph.sass
+++ b/_sass/_year-graph.sass
@@ -10,7 +10,7 @@
 
   .year-graph-bar
     float: left
-    width: 1/(2016-1940)*100%
+    width: 1/(2017-1940)*100%
     background: red
 
     a
